# marketing-automation

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_HANDOFF_P5.md  README.md  RUNTIME.md  pyproject.toml  requirements.txt  system_power_on.py  vn_tickers_raw.txt
.claude/: launch.json  settings.json
api/: README.md  install_service.ps1  main.py  pipeline_bridge.py  requirements-webhook.txt  test_main.py
apps_script/: README.md  execute_trigger.gs
assets/: README.md  README_AI_FULL.md
config/: brand.yaml  settings.yaml
data/: keywords_macro.txt  tickers.txt  tickers_ambiguous.txt  tickers_full.txt
docs/: ARCHITECTURE_MODULES.md  CHANGELOG.md  CONTENT_OUTPUT_SCHEMA.md  HANDOFF.md  MODULE_INDEX.md  TEST.md  VPS_MIGRATION_BACKLOG.md  foundation.md  google_sheets_setup.md  production_agents_design.md  system_design.html  voice_examples.md
prompts/: CONTENT_WRITER_RULES.md  analysis.v1.md  content_composer_rules_v2_1.md  infographic.v1.md  longform_content_writing_rules.md  rules_c_unified_longform.md  video.v1.md
reports/: TEST_RESULT.md  ab_brief_20260713.md  ab_brief_20260714.md  ab_brief_negative_repeat_after_20260714.md  ab_brief_negative_repeat_before_20260714.md  ab_writer_20260715.md
scripts/: ab_voice.py  ab_voice2.py  backfill_topic_keys.py  bench_brief.py  bench_negative_repeat.py  bench_writer.py  build_liquidity_basket.py  crawl_one.py  dedupe_context.py  export_ticker_whitelist_for_aigen.py  golden_evidence.py  power_on.py  produce_from_sheet.py  protect_asset_path.py  render_infographic.py  render_production_assets.py  reroute.py  reset_sheet.py  (+6 more)
(+113 files in other folders)
