[project]
name = "twmkt"
version = "0.1.0"
description = "Turtle Wealth VN — Marketing Automation pipeline (deterministic orchestration + specialized agents + human gates)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
crawl = ["crawl4ai>=0.4"]
llm = ["anthropic>=0.40"]
orchestration = ["langgraph>=0.2"]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
